d_ajax_search.css some fix table overflow scroll

--- a/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
+++ b/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
@@ -74,9 +74,9 @@ h4 {
         margin-left: 15px!important;
     }
 }
-.table-responsive.products{
-    position: relative;
-}
+/*.table-responsive.products{*/
+/*    position: relative;*/
+/*}*/
 .bootbox-form .checkbox > label > input{
     position:absolute;
 }
